# mae.cpp

./: .gitignore  CMakeLists.txt  README.md  README_INFERENCE.md
configs/: mae_pretrain_vit_base.json  mae_pretrain_vit_base_test.json  mae_pretrain_vit_large.json
docs/: curl_usage_guide.md  dataset_setup.md  mae_server_guide.md  pretraining_guide.md  pytorch_cpp_setup.md  wget_workaround.md
include/: base64.h  data_loader.hpp  mae_inference.hpp  mae_model.hpp  pretrain_utils.hpp
scripts/: mae_client.py  test_mae_endpoints.sh
src/: data_loader.cpp  mae_inference.cpp  mae_model.cpp  mae_native_server.cpp  mae_server.cpp  pretrain_mae.cpp  pretrain_utils.cpp  train_mae.cpp
